# libjpeg-turbo-for-android

./: README.md  libjpeg-turbo-android-build.sh
android-sample/app/: build.gradle
android-sample/app/src/androidTest/java/io/github/porum/libjpegturbo/: ExampleInstrumentedTest.kt
android-sample/app/src/main/: AndroidManifest.xml
android-sample/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android-sample/app/src/main/java/io/github/porum/libjpegturbo/: App.kt  JpegTurbo.kt  MainActivity.kt
android-sample/app/src/main/res/values/: strings.xml  themes.xml
android-sample/app/src/main/res/values-night/: themes.xml
android-sample/app/src/test/java/io/github/porum/libjpegturbo/: ExampleUnitTest.kt
android-sample/gradle/wrapper/: gradle-wrapper.properties
